--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
 		<title>JS JasonPie</title>
 	</head>
 	<body>
+		<div id="nav"></div>
+		<div class="test-less"><img src="img/2.jpg"/></div>
 		<div id="title" class="imgbg">ssssssssssssssss</div>
 	</body>
 </html>
